[package]
name = "rusty-umivarcal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.15", features = ["derive"]}
csv = "1.3.0"
indexmap = { version = "2.4.0", features = ["serde", "rayon"] }
noodles = { version = "0.79.0", features = ["bam", "sam", "fasta", "core"] }
rayon = "1.10.0"
regex = "1.10.6"
rmp-serde = "1.3.0"
serde = { version = "1.0.208", features = ["derive"] }
thiserror = "1.0.63"
